--- a/tasks/robosuite_env/config/PickPlaceDistractor.yaml
+++ b/tasks/robosuite_env/config/PickPlaceDistractor.yaml
@@ -1,6 +1,3 @@
-# Configuration file for pick-and-place task
-robot_name: "UR5e"
-controller_name: "OSC_POSE"
 
 #---- Parameters related to env configuration ----#
 
@@ -29,13 +26,23 @@ camera_names: ['camera_front', 'camera_lateral_left','camera_lateral_right']
 camera_poses:
   # position (x,y,z) and quaternion (w,x,y,z)
   { 
-    camera_front: [[1.055, 0, 1.205], [0.575666, 0.410619, 0.410619, 0.575667]], camera_lateral_left: [[0, 1.14, 1.34], [0, 0, 0.559193, 0.829038]], 
-    camera_lateral_right: [[0, -1.14, 1.34], [0.830599, 0.556872, 0, -9.05767e-08]]
+    camera_front: [[1.055, 0, 1.205], [0.575666, 0.410619, 0.410619, 0.575667]], 
+    camera_lateral_left: [[0, 1.14, 1.34], [0, 0, 0.559193, 0.829038]], 
+    camera_lateral_right: [[0, -1.14, 1.34], [0.830599, 0.556872, 0, -9.05767e-08]],
+  }
+
+# camerea gripper
+camera_gripper:
+  {
+    Robotiq85Gripper: {
+                        root: 'right_hand',
+                        pose: [[0.0325, 0.188, -0.0215], [0, 0, 0.9320078690755084, 0.3624380388167472]]
+                      },
   }
 
 # camera attributes
 camera_attribs:
-  {fovy: 41}
+  {fovy: '41'}
 
 # Camera depth
 camera_depths: true
@@ -48,5 +55,3 @@ camera_widths: 256
 
 # Horizon
 horizon: 1000
-
-# To-Do Camera Gripper
