--- a/tasks/robosuite_env/config/PickPlaceDistractor.yaml
+++ b/tasks/robosuite_env/config/PickPlaceDistractor.yaml
@@ -21,7 +21,7 @@ table_offset: [0, 0, 0.70]
 y_ranges: [[0.25, 0.30], [0.05, 0.10], [-0.10, -0.15], [-0.30, -0.35]]
 
 # Camera names
-camera_names: ['camera_front', 'camera_lateral_left','camera_lateral_right']
+camera_names: ['camera_front', 'camera_lateral_left','camera_lateral_right', 'robot0_eye_in_hand']
 
 camera_poses:
   # position (x,y,z) and quaternion (w,x,y,z)
@@ -36,7 +36,7 @@ camera_gripper:
   {
     Robotiq85Gripper: {
                         root: 'right_hand',
-                        pose: [[0.0325, 0.188, -0.0215], [0, 0, 0.9320078690755084, 0.3624380388167472]]
+                        pose: [[-0.0325, -0.170, -0.0215], [0, 0, 0.9396926205381703, -0.3420201440063237]]
                       },
   }
 
@@ -48,10 +48,10 @@ camera_attribs:
 camera_depths: true
 
 # Camera height
-camera_heights: 256
+camera_heights: 480
 
 # Camera width
-camera_widths: 256
+camera_widths: 720
 
 # Horizon
 horizon: 1000
