--- a/experiments/multi_task_configs.yaml
+++ b/experiments/multi_task_configs.yaml
@@ -1,13 +1,15 @@
-EXPERT_DATA:    /home/mandi/mosaic_multitask_dataset  
+# General parameters
+# Path to dataset
+EXPERT_DATA: /mnt/sdc1/frosa/multitask_dataset/mosaic_multitask_dataset/      
 loader_workers: 20 
-save_path:      /home/mandi/mosaic/log_data
+save_path:      /user/frosa/robotic/multitask_lfd/training_log
 save_freq:      1000
 eval_starts:    50 # count by epochs
 eval_freq:      50
 save_optim:     False
 resume:         False
 resume_path:    None
-device:         -1
+device:         3 # device index
 gen_png:        false
 exp_name:       -1
 epochs:         10
@@ -43,7 +45,7 @@ muls:
   simclr_intm:        ${simclr.mul_intm}
 
 
-tasks:                  [ '${button}'] #,'${press}','${draw}','${place}'] 
+tasks:                  [ '${place}'] #,'${press}','${draw}','${place}'] 
 use_all_tasks:          False 
 set_same_n:             -1
 limit_num_traj:         -1 
@@ -137,6 +139,7 @@ pick_place:
   task_per_batch:    16
   traj_per_subtask:  100
   demo_per_subtask:  100 
+
 stack_block:  
   name:             'stack_block'
   n_tasks:           6
