--- a/tasks/robosuite_env/config/NutAssemblyDistractor.yaml
+++ b/tasks/robosuite_env/config/NutAssemblyDistractor.yaml
@@ -1,4 +1,3 @@
-
 #---- Parameters related to env configuration ----#
 
 # Mount type
@@ -18,10 +17,18 @@ table_full_size: [0.85, 0.85, 0.05]
 table_offset: [0, 0, 0.70]
 
 # Object y ranges
-y_ranges: [[0.25, 0.30], [0.05, 0.10], [-0.10, -0.15], [-0.30, -0.35]]
-
+y_ranges: [[-0.30, 0.30]]
+x_range: [[-0.0, 0.10]]
 # Camera names
 camera_names: ['camera_front', 'camera_lateral_left','camera_lateral_right', 'robot0_eye_in_hand']
+
+# Pegs position
+peg_positions:
+  {
+    peg1: [0.35, 0.2, 0.85],
+    peg2: [0.35, 0.0, 0.85],
+    peg3: [0.35, -0.2, 0.85],
+  }
 
 camera_poses:
   # position (x,y,z) and quaternion (w,x,y,z)
