--- a/tasks/robosuite_env/config/PickPlaceDistractor.yaml
+++ b/tasks/robosuite_env/config/PickPlaceDistractor.yaml
@@ -14,29 +14,22 @@ robot_offset: [-0.5305, 0, 0.800]
 table_full_size: [0.85, 0.85, 0.05]
 
 # Table offset
-table_offset: [0, 0, 0.70] # table height
+table_offset: [0, 0, 0.70]
 
 # Object y ranges
-y_ranges: [[-0.30, 0.30]]
-x_range: [[-0.10, -0.20]]
-
+y_ranges: [[0.25, 0.30], [0.05, 0.10], [-0.10, -0.15], [-0.30, -0.35]]
+x_ranges: [[-0.14, -0.20]]
+bin_position_x: [0.0, 0.0]
+bin_position_y: [0.025, 0.025]
 # Camera names
-camera_names: ['camera_front', 'camera_lateral_left','camera_lateral_right', 'robot0_eye_in_hand']
-
-# Pegs position
-peg_positions:
-  {
-    peg1: [0.05, 0.2, 0.75],
-    peg2: [0.05, 0.0, 0.75],
-    peg3: [0.05, -0.2, 0.75],
-  }
+camera_names: ['frontview' ,'camera_front', 'camera_lateral_left','camera_lateral_right', 'robot0_eye_in_hand']
 
 #---- CONF 1 ----#
 camera_poses:
-  # position (x,y,z) and quaternion (w,x,y,z)
+ # position (x,y,z) and quaternion (w,x,y,z)
   { 
     frontview:  [[0.735, 0, 1.085], [0.5336601734161377, 0.4639042615890503, 0.4639032483100891, 0.5336601734161377]],
-    
+   
     camera_front: [[0.735, 0, 1.085], [0.5336601734161377, 0.4639042615890503, 0.4639032483100891, 0.5336601734161377]], #8°
     camera_lateral_left: [[-0.2275, 0.905, 0.93], [0.0, 0.0, 0.6560590863227844, 0.7547095417976379]], #8°
     camera_lateral_right: [[-0.2275, -0.905, 0.93], [0.7547095417976379, 0.6560590863227844, -0.0, -0.0]], #8°
@@ -49,10 +42,9 @@ camera_poses:
 #    frontview: [[-0.163, 0.814, 0.845], [0.0, 0.0, 0.7, 0.7]],
 #    
 #    camera_front: [[0.735, 0, 1.085], [0.5336601734161377, 0.4639042615890503, 0.4639032483100891, 0.5336601734161377]], #8°
-#    camera_lateral_left: [[-0.163, 0.814, 0.845], [0.0, 0.0, 0.7, 0.7]], 
-#    camera_lateral_right: [[-0.163, -0.814, 0.845], [0.7, 0.7, -0.0, -0.0]],
+#    camera_lateral_left: [[-0.163, 0.814, 0.845], [0.0, 0.0, 0.7, 0.7]], #8°
+#    camera_lateral_right: [[-0.163, -0.814, 0.845], [0.7, 0.7, -0.0, -0.0]], #8°
 #  }
-
 
 # camerea gripper
 camera_gripper:
