[BUG] Solved bug related to action dimension

--- a/experiments/config.yaml
+++ b/experiments/config.yaml
@@ -1,7 +1,9 @@
 # General parameters
 # Path to dataset
-EXPERT_DATA:    /mnt/sdc1/frosa/multitask_dataset/mosaic_multitask_dataset
-save_path:      /user/frosa/robotic/multitask_lfd/training_log
+EXPERT_DATA:    /home/ciccio/Desktop/multitask_dataset/mosaic_multitask_dataset #/mnt/sdc1/frosa/multitask_dataset/mosaic_multitask_dataset
+save_path:     /home/ciccio/Desktop/multi_task_lfd/Multi-Task-LFD-Framework/training_log #/user/frosa/robotic/multitask_lfd/training_log
+controller_config_path: /home/ciccio/Desktop/multi_task_lfd/Multi-Task-LFD-Framework/repo/mosaic/tasks/robosuite_env/controllers/config/osc_pose.json
+
 save_freq:      1000
 log_freq:       1000
 val_freq:       1000 
@@ -12,7 +14,7 @@ resume_path:    None
 device:         0
 exp_name:       -1
 epochs:         10
-bsize:          2
+bsize:          10
 vsize:          ${bsize} # optionally, set to a different batchsize for validation loader
 
 # imitation loss multipliers
@@ -77,7 +79,7 @@ dataset_cfg:
   aux_pose:         True # only required for DAML baseline 
   height:           100
   width:            180
-  split:            [0.9, 0.1]
+  split:            [0.5, 0.5]
   demo_T:           4 # number of timestamps for demonstrator
   obs_T:            7 # number of timestamps for learner
   data_augs:        ${augs}
@@ -91,6 +93,8 @@ dataset_cfg:
   agent_name: ur5e
   # name of the demonstrator (teacher)
   demo_name: ur5e
+  # camera name
+  camera_name: camera_front_image
   
 augs:
   strong_jitter:     0.01    
@@ -159,7 +163,7 @@ actions:
   n_layers:         2    
   out_dim:          64
   hidden_dim:       128
-  adim:             8
+  adim:             7
   n_mixtures:       4   
   const_var:        False
   sep_var:          True 
