--- a/experiments/config.yaml
+++ b/experiments/config.yaml
@@ -24,7 +24,7 @@ rep_muls:
   simclr_post:        ${simclr.mul_pos}
   simclr_intm:        ${simclr.mul_intm}
 
-wandb_log: True 
+wandb_log: False 
 train_cfg:
   batch_size:           ${bsize}
   val_size:             ${vsize}
