--- a/experiments/multi_task_configs.yaml
+++ b/experiments/multi_task_configs.yaml
@@ -130,13 +130,14 @@ button:
 pick_place:
   name:              'pick_place'
   n_tasks:           16
-  crop:              [30,70,90,90]  
+  crop:              [0,0,0,0] #[30,70,90,90]  
   n_per_task:        1
   task_ids:          [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]
   loss_mul:          1
   task_per_batch:    16
   traj_per_subtask:  100
   demo_per_subtask:  100 
+  
 stack_block:  
   name:             'stack_block'
   n_tasks:           6
