--- a/experiments/config.yaml
+++ b/experiments/config.yaml
@@ -1,6 +1,6 @@
 debug: False
-EXPERT_DATA:    '/kaggle/output/multitask_dataset_baseline' 
-save_path:      '/kaggle/output/Multi-Task-LFD-Framework/mosaic-baseline-sav-folder/baseline-1'
+EXPERT_DATA:    '../multitask_dataset_baseline' 
+save_path:      'mosaic-baseline-sav-folder/baseline-1'
 wandb_log: True 
 project_name: None
 log_freq:       1
