--- a/experiments/config.yaml
+++ b/experiments/config.yaml
@@ -7,6 +7,7 @@ log_freq:       1
 save_optim:     True
 resume:         False
 resume_path:    None
+resume_step:    -1
 device:         0
 exp_name:       -1
 epochs:         10
