--- a/experiments/config.yaml
+++ b/experiments/config.yaml
@@ -18,7 +18,7 @@ task_names: None
 # imitation loss multipliers
 inv_mul:        1
 bc_mul:         1
-pnt_mul:        0
+pnt_mul:        1
 rep_muls:
   img_byol:           ${byol.mul_pre}
   attn_byol:          ${byol.mul_pos}
@@ -85,14 +85,14 @@ dataset_cfg:
   split:            [0.9, 0.1]
   demo_T:           4
   obs_T:            7
-  take_first_frame: ${mosaic.concat_target_obj_embedding}
+  take_first_frame: ${policy.concat_target_obj_embedding}
   data_augs:        ${augs}
   non_sequential:   False
   crop_twice:       False
   state_spec:       [ee_aa, gripper_qpos]
   allow_val_skip:   ${val_skip}
   allow_train_skip: ${train_skip}
-  use_strong_augs:  False 
+  use_strong_augs:  True 
   select_random_frames: True
   compute_obj_distribution: True
 
@@ -145,9 +145,9 @@ mosaic:
   target_obj_detector_step: 0
   target_obj_detector_path: null
   freeze_target_obj_detector: False
-  remove_class_layers: True
-  load_contrastive: False
-  concat_target_obj_embedding: True
+  remove_class_layers: False
+  load_contrastive: True
+  concat_target_obj_embedding: False
   latent_dim:         40
   sdim:               8
   concat_state:       True
@@ -207,10 +207,11 @@ tosil:
     n_st_attn:      2
     use_pe:         True
     attn_heads:     4
-  n_mixtures:       2
+  n_mixtures:       4
   const_var:        True
   concat_state:     False
   pred_point:       True
+  concat_target_obj_embedding: False
 
 lstm:
   _target_:         mosaic.models.baselines.InverseImitation 
