--- a/experiments/tasks_cfgs/7_tasks.yaml
+++ b/experiments/tasks_cfgs/7_tasks.yaml
@@ -45,7 +45,7 @@ button:
 pick_place:
   name:              'pick_place'
   n_tasks:           16
-  crop:              [30,70,90,90]
+  crop:              [30,0,35,35] # paper object # [30,70,90,90] paper scenario
   n_per_task:        8
   task_ids:          [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]
   loss_mul:          1
